Closed Bug 593069 Opened 14 years ago Closed 14 years ago

Firefox window positioning incorrect after transitioning from full screen to minimized to full screen

Categories

(Core :: Widget: Win32, defect)

x86_64
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED
Tracking Status
blocking2.0 --- final+

People

(Reporter: masso.kenny, Assigned: jimm)

Details

Attachments

(1 file)

User-Agent:       Mozilla/5.0 (Windows NT 6.1; rv:2.0b4) Gecko/20100818 Firefox/4.0b4
Build Identifier: Mozilla/5.0 (Windows NT 6.1; rv:2.0b4) Gecko/20100818 Firefox/4.0b4

Go full screen using either F11 or the menu option. Minimize Firefox to the task-bar. Once the windows is restored it is still in full screen mode but the only way to get out of full screen is pressing F11, the top of the screen does not show the navigation bar on mouse over.

Reproducible: Always

Steps to Reproduce:
1. Go full screen
2. Minimize the FF window
3. Restore the FF window
Actual Results:  
It is not possible now to have the navigation bar on mouse over without exiting full screen using F11

Expected Results:  
Be able to continua flawlessly the navigation using full screen mode.

about:buildconfig
Source

Built from http://hg.mozilla.org/mozilla-central/rev/9d6448b6a677
Build platform
target
i686-pc-mingw32
Build tools
Compiler 	Version 	Compiler flags
d;D:\mozilla-build\msys\mozilla-build\python25\python2.5.exe -O e;D:\mozilla-build\msys\builds\moz2_slave\win32_build\build\build\cl.py cl 	14.00.50727.762 	-TC -nologo -W3 -Gy -Fdgenerated.pdb -DNDEBUG -DTRIMMED -Zi -Zi -UDEBUG -DNDEBUG -GL -wd4624 -wd4952 -O1
d;D:\mozilla-build\msys\mozilla-build\python25\python2.5.exe -O e;D:\mozilla-build\msys\builds\moz2_slave\win32_build\build\build\cl.py cl 	14.00.50727.762 	-GR- -TP -nologo -Zc:wchar_t- -W3 -Gy -Fdgenerated.pdb -wd4800 -DNDEBUG -DTRIMMED -Zi -Zi -UDEBUG -DNDEBUG -GL -wd4624 -wd4952 -O1
Configure arguments

--enable-application=browser --enable-update-channel=beta --enable-update-packaging --enable-jemalloc --enable-tests --enable-official-branding
confirmed. the window origin appears to be set above the screen bounds.
Status: UNCONFIRMED → NEW
Ever confirmed: true
blocking2.0: --- → ?
Assignee: nobody → jmathies
Component: General → Widget: Win32
Product: Firefox → Core
QA Contact: general → win32
Version: unspecified → Trunk
blocking2.0: ? → final+
Comment on attachment 471647 [details] [diff] [review]
restore fullscreen sizemode

The code was losing the full screen state when going from fs -> min -> fs. A regression from adding full screen size mode support in window's widget a while back.
Attachment #471647 - Flags: review?(roc)
Summary: Firefox stacks into full screen after minimize to the task-bar → Firefox window positioning incorrect after transitioning from full screen to minimized to full screen
http://hg.mozilla.org/mozilla-central/rev/34d82d177553
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: