Bug 593069 - Firefox window positioning incorrect after transitioning from full screen to minimized to full screen. r=roc, a=blocking-final.